# llm-based-recommender

./: .dockerignore  .env.example  .gitignore  BUG_ANALYSIS.md  BUG_FIX_REPORT.md  BUG_FIX_SUMMARY.md  BUG_ROOT_CAUSE_ANALYSIS.md  DEPLOYMENT_VERIFICATION.md  DOCKER_RUNBOOK.md  Dockerfile  FINAL_FIX_REPORT.md  IMPROVEMENT_PLAN.md  PROJECT_TECHNICAL_DOCUMENT.md  QUICK_SUMMARY.md  README.md  REMAINING_ISSUES.md  TEST_REPORT.md  THREE_ROUND_CONVERSATION.md  check_db.py  config.py  diagnose_port.py  diagnose_retrieval.py  docker-compose.api-gpu.yml  docker-compose.gpu.yml  docker-compose.local.yml  docker-compose.milvus.gpu.yml  docker-compose.milvus.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  test_conversation.py  test_fixed_version.py  test_multi_turn_bug.py  test_round3.py  test_three_turn_context.py  三轮对话记录.md  王娟_AI产品经理简历 (1).docx
.postman/: resources.yaml
scripts/: audit_shoe_data_quality.py  check_knowledge_index_status.py  check_product_index_status.py  docker-entrypoint.sh  index_knowledge_base.py  sync-data-to-docker.sh
src/: shared.py
src/api/: main.py
src/database/: __init__.py  connection.py  enrich_missing_fields.py  product_repo.py  schema.py  seed_data.py  seed_jsonl_data.py
src/indexing/: data_loader.py  embedding.py  multimodal_embedding.py
src/knowledge_base/: document_processor.py  file_store.py  knowledge_retriever.py
tests/: __init__.py  test_combined_analysis_node.py  test_file_store.py  test_hybrid_retriever.py  test_knowledge_retriever.py  test_node_logic.py  test_product_documents.py  test_state.py
(+45 files in other folders)
