[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-based-recommender"
version = "0.1.0"
description = "LLM-based shoe recommender with FastAPI, Streamlit, Milvus, and RAG retrieval."
requires-python = ">=3.10,<3.12"
readme = "PRD.md"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
